some kind of logo

--- a/www/template.html
+++ b/www/template.html
@@ -37,6 +37,8 @@ $endfor$
 $for(include-before)$
 $include-before$
 $endfor$
+$if(skiptitle)$
+$else$
 $if(title)$
 <header>
 <h1 class="title">$title$</h1>
@@ -50,6 +52,7 @@ $if(date)$
 <h3 class="date">$date$</h3>
 $endif$
 </header>
+$endif$
 $endif$
 $if(toc)$
 <nav id="$idprefix$TOC">
