place output in out directory

--- a/www/template.html
+++ b/www/template.html
@@ -26,6 +26,9 @@ $endif$
 $for(css)$
   <link rel="stylesheet" href="$css$">
 $endfor$
+  <style type="text/css">
+    article { margin-bottom:20px;  }
+  </style>
 $if(math)$
   $math$
 $endif$
